# remote-garden-API

./: .env  .gitignore  Dockerfile  Dockerfile.compilereq  Dockerfile.format  Dockerfile.migration  Dockerfile.mock  Dockerfile.prod  Makefile  README.md  dev.sh  docker-compose.yml  format.sh  prod.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_mock.sh
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  docker-setup.sh  setup.sh
admin_app/: Dockerfile  enums.py  main.py  models.py  requirements.txt
agent_app/: Dockerfile  main.py
agent_app/agent_clients/: backend_agent.py
agent_app/agent_models/: agent_token.py  device.py  enums.py  reading.py  schedule.py  trigger.py
agent_app/agent_services/: agent.py  token.py
agent_app/api/: core.py
agent_app/clients/: backend_agent.py  backend_token.py
agent_app/models/: device.py  enums.py  reading.py  schedule.py  token.py  trigger.py
agent_app/services/: agent.py  token.py
api_app/: Dockerfile  db_init.py  dev.sh  main.py  prod.sh  requirements.txt
api_app/clients/: agent_client.py  csr_client.py
app/: alembic.ini  db_init.py  main.py
app/ca/: ca.crt  (+1 more)
common_db/: db.py  dbdiagram.script  enums.py
csr-signer/: main.py
csr_signer_app/: Dockerfile  main.py  requirements.txt
delivery_app/: docker-compose.yml
docs/: Makefile
gh_proxy_app/: Dockerfile  main.py
mock_mqtt_app/: Dockerfile  mock_device_publisher.py
mqtt-server/: generate-backend-certs.sh  generate-mqtt-certs.sh
mqtt_broker_app/: Dockerfile  generate-backend-certs.sh  generate-mqtt-certs.sh
(+290 files in other folders)
